// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [ 'aad', 'github' ], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'aad'
  | 'github'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'github'
  | 'twitter'
  | 'line'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
  | 'administrator'
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
"
`;
